[gd_scene load_steps=12 format=2]

[ext_resource path="res://client/game.gd" type="Script" id=1]
[ext_resource path="res://client/assets/faustctf.glb" type="PackedScene" id=2]
[ext_resource path="res://client/assets/Sand_-_Bright.material" type="Material" id=3]
[ext_resource path="res://client/assets/water.png" type="Texture" id=4]
[ext_resource path="res://client/assets/crosshair.png" type="Texture" id=5]
[ext_resource path="res://client/assets/flag.glb" type="PackedScene" id=6]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 200, 200 )

[sub_resource type="Shader" id=2]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
}




void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = mix(texture(texture_albedo,base_uv + TIME), texture(texture_albedo,base_uv + 1.5*TIME), 0.25);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/uv1_scale = Vector3( 200, 200, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0.243137, 0.976471, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.976471, 0.0705882, 0, 1 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="faustctf" parent="." instance=ExtResource( 2 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 10 )
mesh = SubResource( 1 )
material/0 = ExtResource( 3 )

[node name="Water" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 10 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.290936, 0.432178, -0.853568, 0.94601, 0.00330864, 0.32412, 0.142902, -0.901782, -0.407883, 0, 9.08993, 0 )
shadow_enabled = true

[node name="Crosshair" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" type="VBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team1" type="HBoxContainer" parent="Sidebar"]
margin_right = 80.0
margin_bottom = 14.0
alignment = 2

[node name="Name" type="Label" parent="Sidebar/Team1"]
margin_right = 68.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0.321569, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Blue Team"
align = 2

[node name="Points" type="Label" parent="Sidebar/Team1"]
margin_left = 72.0
margin_right = 80.0
margin_bottom = 14.0
text = "0"
align = 2

[node name="Team1FlagStatus" type="Label" parent="Sidebar"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="Team2" type="HBoxContainer" parent="Sidebar"]
margin_top = 36.0
margin_right = 80.0
margin_bottom = 50.0
alignment = 2

[node name="Name" type="Label" parent="Sidebar/Team2"]
margin_left = 5.0
margin_right = 68.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.0705882, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Red Team"
align = 2

[node name="Points" type="Label" parent="Sidebar/Team2"]
margin_left = 72.0
margin_right = 80.0
margin_bottom = 14.0
text = "0"
align = 2

[node name="Team2FlagStatus" type="Label" parent="Sidebar"]
margin_top = 54.0
margin_right = 80.0
margin_bottom = 68.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="Flag0" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 16 )

[node name="Flag" parent="Flag0" index="1"]
material/0 = SubResource( 4 )

[node name="Flag1" parent="." instance=ExtResource( 6 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 30, 0, 18 )

[node name="Flag" parent="Flag1" index="1"]
material/0 = SubResource( 5 )

[node name="Menu" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -31.0
margin_right = 55.0
margin_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 117.0
margin_bottom = 69.0

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
margin_right = 110.0
margin_bottom = 14.0
text = "Menu"
align = 1

[node name="Return" type="Button" parent="Menu/VBoxContainer"]
margin_top = 18.0
margin_right = 110.0
margin_bottom = 38.0
text = "Return to game"

[node name="Exit" type="Button" parent="Menu/VBoxContainer"]
margin_top = 42.0
margin_right = 110.0
margin_bottom = 62.0
text = "Quit"
[connection signal="pressed" from="Menu/VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]

[editable path="Flag0"]

[editable path="Flag1"]
